<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/discFragment">

    <fragment
        android:id="@+id/discFragment"
        android:name="com.diego.discoteca.ui.disc.DiscFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_disc">
...
        <action
            android:id="@+id/action_discFragment_to_discDetailFragment"
            app:destination="@id/discDetailFragment" />

        <action
            android:id="@+id/action_discFragment_to_addDiscFragment"
            app:destination="@id/addDiscFragment" />

        <action
            android:id="@+id/action_discFragment_to_scanBarcodeFragment"
            app:destination="@id/scanBarcodeFragment" />

        <action
...
            app:destination="@id/discFragment"
            app:popUpTo="@id/discFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_addDiscFragment_to_discResultSearchFragment"
            app:destination="@id/discResultSearchFragment" />

        <action
            android:id="@+id/action_addDiscFragment_to_discPresentFragment"
            app:destination="@id/discPresentFragment" />

    </fragment>

    <fragment
        android:id="@+id/scanBarcodeFragment"
        android:name="com.diego.discoteca.ui.scan.ScanBarcodeFragment"
...
